Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • NetworkManager NetworkManager
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 198
    • Issues 198
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 18
    • Merge requests 18
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • NetworkManagerNetworkManager
  • NetworkManagerNetworkManager
  • Issues
  • #807
Closed
Open
Issue created Sep 23, 2021 by Christian Eggers@ceggers_arri

Inappropriate assertion in ipv4acd_on_packet() --> crash on incoming ARP packet

Version: NetworkManager-1.22.10 (applies also for current GIT version)

Distribution: Yocto dunfell (G_DISABLE_ASSERT is not defined)

src/systemd/src/libsystemd-network/sd-ipv4acd.c

static int ipv4acd_on_packet()
{
...
n = recv(...);
switch (acd->state) {
case foo:
   ...
   break;
case bar:
   ...
   break;
default:
   assert_not_reached();
}

So NetworkManager will crash if an ARP packet (with a few extra conditions) is received while the state machine is not expecting it.

The assertion can easily be triggered externally if the selected IPv4 address is known in advance: nping --arp --count 1000 --delay 100ms <ip address>

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking