libsystemd-network: disable event sources before unref them

This also (is supposed to) fix a assertion failure when in ipv4acd
when receiving an ARP packet in an unexpected state.

See-also: https://github.com/systemd/systemd/issues/20825
See-also: https://github.com/systemd/systemd/pull/20826
https://github.com/systemd/systemd/pull/20826/commits/eb2f750242d6c4c0963887dbd561d8bafa318685

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/-/issues/807
(cherry picked from commit 7fba0f7cb2764a6c5f81c1993dbc580b25ae9b0f)